agregado p del h2, h3 y css h3

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <h2>Este es un h2</h2>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cupiditate at praesentium.</p>
+
+    <h3>Este es un H3</h3>
+
 </body>
 
 </html>
